--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/jonobr1/cena-trimalchionis/issues"
   },
-  "homepage": "https://github.com/jonobr1/cena-trimalchionis#readme"
+  "homepage": "https://github.com/jonobr1/cena-trimalchionis#readme",
+  "devDependencies": {
+    "@google-cloud/translate": "^2.1.2"
+  }
 }
