Added Fuse Look Ups and new Satyricon visible on /index.html

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jonobr1/cena-trimalchionis#readme",
   "devDependencies": {
     "@google-cloud/translate": "^2.1.2",
+    "fuse.js": "^3.3.0",
     "moment": "^2.22.2",
     "underscore": "^1.9.1"
   }
