--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "fuse.js": "^3.3.0",
     "moment": "^2.22.2",
     "underscore": "^1.9.1"
+  },
+  "dependencies": {
+    "two.js": "^0.7.0-beta.2"
   }
 }
